# PoetryExample

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  cicd.yml
src/simple_poetry_package/: cli.py  hello_world.py
tests/: test_code.py
