[tool.poetry]
name = "simple-poetry-package"
version = "0.2.0"
description = "'Creating an example poetry package'"
authors = ["rahul1990bhatia <rahul1990bhatia@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.2.6"
mypy = "^1.11.1"
bandit = "^1.7.9"

[tool.poetry.scripts]
hello_world = 'simple_poetry_package.cli:cli'


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"


[tool.poetry.group.install.dependencies]
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
